src/snapshots/spekinew__common__tests__from_card_path.snap
---
source: src/common.rs
expression: x
---
Category(
    [
        "maths",
        "calculus",
    ],
)
