src/snapshots/spekinew__common__tests__load_all.snap
---
source: src/common.rs
expression: folders
---
[
    Category(
        [
            "history",
        ],
    ),
    Category(
        [
            "maths",
        ],
    ),
    Category(
        [
            "maths",
            "calculus",
        ],
    ),
]
